	PR c++/84421 - type-dependent if constexpr

* semantics.c (finish_if_stmt_cond): Check
	type_dependent_expression_p.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@257744 138bc75d-0d04-0410-961f-82ee72b054a4